--- a/dict/conf.ini
+++ b/dict/conf.ini
@@ -18,7 +18,7 @@ friso.charset = 0
 #linux:	friso.lex_dir = /c/products/friso/dict/UTF-8/
 #Winnt:	friso.lex_dir = D:/products/friso/dict/UTF-8/
 #relative path search (All system)
-friso.lex_dir = ./
+friso.lex_dir = ./UTF-8/
 
 #the maximum matching length.
 friso.max_len = 5 
